--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nextjs-starter-template",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,7 +11,9 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "lucide-react": "^0.396.0",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0"
